SERVER-22699 avoid taking a minidump when debugger is not present for breakpoint() on Windows